--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,42 +1,87 @@
-.Navbar{
-    content: '';
-    position: fixed;
-    top:0;
-    padding:0px 120px;
+.Navbar {
+  content: "";
+  position: fixed;
+  top: 0;
+  padding: 0px 120px;
+  width: 100%;
+  height: 60px;
+  border-bottom: 1px solid white;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.Navbar img {
+  padding: 15px 0px;
+  width: 200px;
+  cursor: pointer;
+}
+
+.showUL {
+  padding: 18px 0px;
+  width: 64%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 13px;
+}
+
+.Navbutton {
+  border-radius: 15px 15px 15px 15px;
+  background-color: #3ac280;
+  outline: none;
+  border: none;
+  color: white;
+  width: 90px;
+  height: 32px;
+  transition: 0.5s;
+  text-align: center;
+}
+
+.Navbar ul li a:hover {
+  color: #3ac280;
+}
+
+.navbarmenu {
+  display: none;
+}
+
+.navbarmenu span {
+  width: 25px;
+  height: 2px;
+  background-color: black;
+}
+
+@media only screen and (max-width: 1050px) {
+  .Navbar {
+    padding: 0 20px;
+    }
+  .showUL {
+    display: none;
+  }
+
+  .showMenu{
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    color: black;
     width: 100%;
-    height: 60px;
-    border-bottom: 1px solid white;
+    height: 100%;
     z-index: 100;
+  }
+  .showMenu li{
+      width: 100%;
+      text-align: center;
+    }
+  .navbarmenu {
+    width: 50px;
+    height: 20px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
-}
-
-.Navbar img{
-    padding:15px 0px;
-    width:200px;
-}
-
-.Navbar ul{
-    padding: 18px 0px;
-    width: 64%;
-    display: flex;
-    justify-content: space-between;
-    font-size: 13px;
-}
-
-.Navbutton{
-    border-radius: 15px 15px 15px 15px;
-    background-color:  #3AC280;
-    outline: none;
-    border: none;
-    color: white;
-    width: 90px;
-    height: 32px;
-    text-align: center;
-    margin-top: -15px;
-    transition: 0.5s;
-}
-
-.Navbar ul li a:hover{
-    color:#3AC280;
+    cursor: pointer;
+  }
 }
