--- a/src/components/VideoSection/VideoSection.module.css
+++ b/src/components/VideoSection/VideoSection.module.css
@@ -1,9 +1,10 @@
 
   .VideoSection{
     width:100%;
-    height:700px; 
+    height: 550px;
     overflow: hidden;
     object-fit: contain; 
+    background-color: black;
   }
   
   .VideoContainer{
@@ -63,11 +64,13 @@
     .videotextcontainer{
       content: '';
       position: absolute;
+      top:0%;
       width:100%;
       height: 100%;
       display: flex;
       align-items: center;
       justify-content: center;    
+      /* object-fit: contain; */
     }
   
     @media only screen and (max-width: 1150px) {
@@ -93,7 +96,6 @@
         left: 0;
         top: 0px;
         width: 100%; 
-        height: auto; 
         object-fit: contain;
       }
     }
