--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,13 @@ ul li {
   list-style: none;
 }
 
+.App{
+  width:100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;  
+}
+
 a {
   text-decoration: none;
   color: white;
