--- a/src/components/HowItWork/HIW.module.css
+++ b/src/components/HowItWork/HIW.module.css
@@ -9,21 +9,23 @@
 .HiwCard{
     display: flex; 
     width:100%;
-    height:300px;
+    height:auto;
     color:#0a5169;
     text-align: justify;
 
 }
 
 .HiwCard h1{
-    font-size: 200px; 
+    font-size: 170px; 
 }
-
-.HiwCardBG img{
-    margin-top:100px;
-    width: 100px;
-    height: auto; 
-    opacity: 0.5;
+.ImageSet{
+    background-image: url('./blue-circleF.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: top;
+    margin-top: -100px;
+    opacity: 0.1;
+    
 }
 .HiwCard div{
     padding:100px 0px 0px 0px;
@@ -34,11 +36,34 @@
 }
 
 .hiwHeading{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    left:0;
+    top: 0;
     font-size:42px;
     font-weight: bold;
+    z-index: 1;
+    margin-bottom:50px;
+}
+
+.hiwHeading:before{
+    content: '';
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    opacity: 0.1;
+    margin:auto;
+    margin-top:-70px;
+    margin-left:40px;
+    background-image: url('./Blue_circle.png');
+    background-position: center;
+    background-size: contain;
+    z-index: 100%;
 }
 
 .hiWButton{
+    margin-top: 50px;
     border-radius: 20px;
     background-color:  #3AC280;
     outline: none;
@@ -48,4 +73,19 @@
     height: 40px;
     text-align: center; 
     transition: 0.5s;
+}
+
+@media only screen and (max-width: 1050px) {
+
+    .HowItWorkSection{
+        padding: 150px 25px;
+        width: 100%;
+        height: 100%vw;
+    }
+    .HiwCardContainer {
+        flex-wrap: wrap;
+        padding:100px 0px;
+        height: 100%;
+    }
+
 }
