--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,15 +1,16 @@
 .Navbar {
   content: "";
+  position: absolute;
   position: fixed;
   top: 0;
   padding: 0px 120px;
   width: 100%;
   height: 60px;
   border-bottom: 1px solid white;
-  z-index: 100;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 100;
 }
 
 .Navbar img {
@@ -53,6 +54,9 @@
   background-color: black;
 }
 
+.HideshowMenu{
+  display: none;
+}
 @media only screen and (max-width: 1050px) {
   .Navbar {
     padding: 0 20px;
