--- a/src/components/VideoSection/VideoSection.module.css
+++ b/src/components/VideoSection/VideoSection.module.css
@@ -1,17 +1,15 @@
 
   .VideoSection{
-    width:100%;
-    height: 550px;
+    position: relative;
+    /* width:100%; 
+    height: 600px; */
     overflow: hidden;
     object-fit: contain; 
     background-color: black;
   }
   
   .VideoContainer{
-      content: '';
-      position: absolute ;
-      left: 0;
-      top: -50px;
+      position: relative;
       width: 100%; 
       height: auto; 
       object-fit: contain;
@@ -22,12 +20,12 @@
       position: absolute;
       width:30px;
       height: 45px;
-      top: 85%;
+      top: 70%;
       left: 48%;
       background-color: transparent;
       border: 2px solid black;
       border-radius: 15px 15px 15px 15px;
-      z-index: 1;
+      z-index: 2;
       transition: 0.5s;
     }
   
@@ -70,7 +68,7 @@
       display: flex;
       align-items: center;
       justify-content: center;    
-      /* object-fit: contain; */
+      object-fit: contain;
     }
   
     @media only screen and (max-width: 1150px) {
@@ -89,14 +87,6 @@
       .videotextcontainer{
         top:0;
         height: 250px;
-      }
-      .VideoContainer{
-        content: '';
-        position: absolute ;
-        left: 0;
-        top: 0px;
-        width: 100%; 
-        object-fit: contain;
       }
     }
   
