--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
+@import '~antd/dist/antd.css';
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 ul li {
