--- a/src/components/Contact/Form.module.css
+++ b/src/components/Contact/Form.module.css
@@ -35,7 +35,7 @@
 .FormSection form {
   display: flex;
   justify-content: space-between;
-  padding: 50px 0px;
+  padding: 50px 0 0 0px;
   width: 100%;
   height: 100%;
 }
