--- a/src/components/ExampleDelieverables/ExampleDelieverables.module.css
+++ b/src/components/ExampleDelieverables/ExampleDelieverables.module.css
@@ -60,6 +60,63 @@
     font-size: 42px;
   }
 
-  .ant-carousel .slick-dots li button{
-    background-color: red;
+
+.EDVideoS2{
+    margin-top:25px;
+    /* background-color: green; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
+
+
+.EDVideo_2S2 {
+  width:90%;
+  height: 100%;
+  object-fit: contain;
+  margin-top:25px;
+}
+.EDVideo_1S2 {
+
+    width:90%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.EDVideo_2S2 img , .EDVideo_1S2 img
+{
+  width:100%;
+  height:100%;
+  object-fit: contain;
+}
+
+.HeadingUEffect{
+  width:300px;
+  height: 50px;
+  margin: auto;
+  padding: 10px 0px;
+  transition: 0.5s;
+  font-size: 28px; 
+  margin-bottom: 50px;
+}
+
+.HeadingUEffect:hover{
+border-bottom:3px solid black;
+}
+
+@media only screen and (max-width: 1050px) {
+  .EDVideoS2{
+    margin: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .EDVideo_1S2 , .EDVideo_2S2{
+    width: 100%;
+  }
+
+  .carousel{
+    display: none;
+  }
+}
