--- a/src/components/FeeStructure/FeeStructure.module.css
+++ b/src/components/FeeStructure/FeeStructure.module.css
@@ -1,6 +1,5 @@
 .FeeStructureSection{
-    /* background-color: rgba(0, 0, 0, 0.1); */
-    width:100%;
+    /* width:100%; */
     z-index: 3;
     padding:150px 100px;
     text-align: center;
@@ -48,7 +47,6 @@
 
 .FeeShow p {
     padding:50px 0px;
-    width:530px;
     text-align: center;
 }
 
