--- a/src/components/Login/login.module.css
+++ b/src/components/Login/login.module.css
@@ -2,7 +2,7 @@
     
     width:100%;
     height:700px;
-    background-color: white;
+    background-color: gray;
     display: flex;
     align-items: center;
     justify-content: center;
