--- a/src/components/Login/login.module.css
+++ b/src/components/Login/login.module.css
@@ -1,5 +1,4 @@
 .LoginPage{
-    
     width:100%;
     height:700px;
     background-color: gray;
@@ -9,7 +8,7 @@
     flex-direction: column;
 }
 .LoginPage h1{
-    margin-top: -100px;
+    margin-top: -50px;
 }
 .LoginPage form {
 padding: 50px 0px;
@@ -54,6 +53,21 @@ padding: 50px 0px;
     color: white;
     width: 140px;
     height: 40px;
+    text-align: center; 
+    transition: 0.5s;
+    margin-bottom: 20px;
+}
+
+.CLhiWButton{
+    margin-top: 20px;
+    border-radius: 30px;
+    /* background-color:  #3AC280; */
+    outline: none;
+    border: 3px solid #3AC280;
+    color: #3AC280;
+    font-size: 18px;
+    width: 200px;
+    height: 50px;
     text-align: center; 
     transition: 0.5s;
 }
