--- a/src/components/VideoSection/VideoSection.module.css
+++ b/src/components/VideoSection/VideoSection.module.css
@@ -90,3 +90,12 @@
       }
     }
   
+    @media only screen and (max-width: 415px) {
+      .Mouse{
+        display: none;
+      }
+      .videotext{
+        font-size: 16px;
+      }
+    }
+  
