--- a/src/components/ExampleDelieverables/ExampleDelieverables.module.css
+++ b/src/components/ExampleDelieverables/ExampleDelieverables.module.css
@@ -3,36 +3,13 @@
     z-index: 3;
     padding: 150px 100px;
     text-align: center;
+    margin-top: 50px;
     background-color: rgba(0, 0, 0, 0.1);
 }
-  
-  .EDhiwHeading {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    font-size: 42px;
-    font-weight: bold;
-    z-index: 1;
-    margin-bottom: 150px;
-  }
-  
-  .EDhiwHeading:before {
-    content: "";
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    top:-60px;
-    left:0;
-    right: 0;
-    opacity: 0.1;
-    margin: auto;
-    background-image: url("./Blue_circle.png");
-    background-position: center;
-    background-size: contain;
-    z-index: 100%;
-  }
+
+.EDSection h1{
+  padding: 50px 0px;
+}
 
   .EDVideo{
       margin-top:25px;
@@ -82,7 +59,6 @@
 }
 
 .HeadingUEffect{
-  width:300px;
   height: 50px;
   margin: auto;
   padding: 10px 0px;
@@ -92,7 +68,7 @@
 }
 
 .HeadingUEffect:hover{
-border-bottom:3px solid black;
+text-decoration: underline;
 }
 
 @media only screen and (max-width: 1050px) {
@@ -110,5 +86,21 @@ border-bottom:3px solid black;
 
   .carousel{
     width:auto;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+
+  .EDVideo_1 , .EDVideo_2{
+    height:150px;
+  }
+  .EDSection{
+    padding : 50px 50px;
+  }
+  .carousel{
+    width:auto;
+  }
+  .HeadingUEffect{
+    font-size: 20px;
   }
 }
