--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: space-between;
   z-index: 100;
+  box-sizing: border-box;
 }
 
 .Navbar img {
@@ -62,6 +63,8 @@
 .HideshowMenu{
   display: none;
 }
+
+
 @media only screen and (max-width: 1050px) {
   .Navbar {
     padding: 0 20px;
@@ -101,3 +104,9 @@
     cursor: pointer;
   }
 }
+
+@media only screen and (max-width: 320px) {
+  .Navbar {
+    padding: 0 80px 0 20px;
+    }
+  }
