--- a/src/components/ExampleDelieverables/Slider/slider.css
+++ b/src/components/ExampleDelieverables/Slider/slider.css
@@ -1,15 +1,22 @@
-.carousel{
-    width:auto;
-    margin: 50px auto;
+.carousel {
+  width: 700px;
+  margin: 50px auto;
 }
 
 .carousel img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
-.slick-next:before, .slick-prev:before{
-     background-color: black;
-     border-radius: 100%;
-     border: none;
-    }
+.slick-next:before,
+.slick-prev:before {
+  background-color: black;
+  border-radius: 100%;
+  border: none;
+}
+
+@media only screen and (max-width: 850px) {
+  .carousel {
+    width: auto;
+  }
+}
