--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -6,7 +6,7 @@
   padding: 0px 120px;
   width: 100%;
   height: 60px;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: space-between;
