--- a/src/components/FeeStructure/FeeStructure.module.css
+++ b/src/components/FeeStructure/FeeStructure.module.css
@@ -1,13 +1,11 @@
 .FeeStructureSection{
-    /* width:100%; */
-    margin-top: 50px;
     z-index: 3;
-    padding:150px 100px;
+    padding:50px 100px 0 100px;
     text-align: center;
 }
 
 .FeeShow{
-    padding:100px 0px;
+    padding:100px 0px 0px 0px;
 }
 
 .FeeShowdata{
