--- a/src/components/HowItWork/HIW.module.css
+++ b/src/components/HowItWork/HIW.module.css
@@ -2,7 +2,7 @@
     background-color: rgba(0, 0, 0, 0.1);
     width:100%;
     z-index: 3;
-    padding:150px 100px;
+    padding:100px 100px;
     text-align: center;
 }
 
@@ -82,6 +82,16 @@
 }
 
 @media only screen and (max-width: 450px) {
+
+    .HowItWorkSection{
+
+        padding:50px 25px;
+    }
+
+    .HiwCard div{
+        padding:50px 0px 0px 0px;
+        color:black;
+    }
     .HiwCard{
         flex-direction: column;        
     }   
