--- a/src/components/Login/login.module.css
+++ b/src/components/Login/login.module.css
@@ -1,6 +1,6 @@
 .LoginPage{
     width:100%;
-    height:700px;
+    height:570px;
     background-color: gray;
     display: flex;
     align-items: center;
@@ -8,10 +8,10 @@
     flex-direction: column;
 }
 .LoginPage h1{
-    margin-top: -50px;
+  text-align: center;
 }
 .LoginPage form {
-padding: 50px 0px;
+padding: 20px 0px;
 }
 .Wrapper{
     position: relative;
@@ -24,7 +24,7 @@ padding: 50px 0px;
     top: 10px;
     font-size: 20px;
     z-index: 2;
-    background-color: white;
+    background-color: transparent;
     transition: 0.5s;
   }
   
